fix: Pull latest changes before pushing version bump
Prevents non-fast-forward errors when remote has moved ahead

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -286,6 +286,7 @@ jobs:
 
       - name: Push changes
         run: |
+          git pull --rebase origin main
           git push origin main
           git push origin "v${{ steps.new_version.outputs.version }}"
 
