--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,10 +1,10 @@
 name: CI/CD Pipeline
 
 # Deployment Flow (2-tier):
-# 1. Feature branches → `dev` via PR → Deploy to dev.getclientflow.app - after tests pass
-# 2. `dev` → `main` via PR → Deploy to Production (getclientflow.app) - after tests pass → Auto-release
+# 1. Feature branches → `dev` via PR → Deploy to dev.getclientflow.app (no tests - fast iteration)
+# 2. `dev` → `main` via PR → Tests run → Merge → Deploy to Production + Auto-release
 #
-# This ensures all code is reviewed on dev before production
+# Tests only run once when opening a PR to main (production gate)
 # After release, main changes are synced back to dev
 
 on:
@@ -21,6 +21,8 @@ jobs:
   lint:
     name: Lint & Type Check
     runs-on: ubuntu-latest
+    # Only run on PRs to main (production gate) - skip on direct pushes
+    if: github.base_ref == 'main'
 
     steps:
       - name: Checkout code
@@ -42,6 +44,8 @@ jobs:
   test:
     name: Unit Tests
     runs-on: ubuntu-latest
+    # Only run on PRs to main (production gate) - skip on direct pushes
+    if: github.base_ref == 'main'
 
     steps:
       - name: Checkout code
@@ -90,7 +94,7 @@ jobs:
     name: Deploy to Dev
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/dev'
-    needs: [lint, test]
+    # No tests required for dev - fast iteration
 
     steps:
       - name: Checkout code
@@ -114,12 +118,12 @@ jobs:
     name: Deploy Production
     runs-on: ubuntu-latest
     # Only deploy to production when merging from dev to main
+    # Tests already passed on the PR - no need to run again
     if: |
       github.ref == 'refs/heads/main' &&
       (github.event_name == 'push' &&
        (contains(github.event.head_commit.message, 'Merge') ||
         github.event.head_commit.author.username == 'github-actions[bot]'))
-    needs: [lint, test]
 
     steps:
       - name: Checkout code
