--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -150,7 +150,12 @@ jobs:
   auto-release:
     name: Auto Release
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    # Only run on manual merges to main, skip auto-generated version bump commits
+    if: |\
+      github.ref == 'refs/heads/main' &&
+      github.event_name == 'push' &&
+      github.event.head_commit.author.username != 'github-actions[bot]' &&
+      !contains(github.event.head_commit.message, 'chore: Bump version')
     needs: deploy-production
 
     permissions:
